# ToDoManager-Cpp

./: .gitignore  CMakeLists.txt  README.md  glossary.md  main.cpp  resources.qrc
.github/workflows/: build.yml  ci.yml  pages.yml
accounts/: authManager.cpp  authManager.h
authWindow/: accountWindow.cpp  accountWindow.h  accountWindow.ui  loginWindow.cpp  loginWindow.h  loginWindow.ui  registerWindow.cpp  registerWindow.h  registerWindow.ui
databaseManager/: TaskRepository.cpp  TaskRepository.h  accountRepository.cpp  accountRepository.h  databaseManager.cpp  databaseManager.h
logger/: logger.h
mainWindow/: SettingsWindow.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  settingsWindow.cpp  settingsWindow.h  taskEditorWindow.cpp  taskEditorWindow.h  taskEditorWindow.ui  taskItemWidget.cpp  taskItemWidget.h  taskItemWidget.ui
metrics/: cloc.txt  lizard.txt
settings/: SettingsWindow.ui  appSettings.h  settingsWindow.cpp  settingsWindow.h
styles/: main.qss  main_dark.qss
tasks/: TaskManager.cpp  TaskManager.h  task.cpp  task.h  tasks.cpp  tasks.h
tests/: CMakeLists.txt  test_authmanager.cpp  test_main_with_qapp.cpp  test_mainwindow_qt.cpp  test_settingswindow_qt.cpp  test_task_manager.cpp  test_taskeditor_qt.cpp  test_taskitemwidget_qt.cpp
uml/: CommunicationDiagram.html  CompositeStructureDiagram.html  DeploymentDiagram.html  InteractionOverviewDiagram.html  PackageDiagram.html  SequenceDiagram.html  StateDiagram.html  UseCaseDiagram.html  activityDiagram.html  classDiagram.html  classDiagramAfterRefactor.html  componentDiagram.html  componentDiagramAfterRefactoring.html  objectDiagram.html  timingDiagram.html
windowEdit/: framelessWindow.cpp  framelessWindow.h
